--- a/package.json
+++ b/package.json
@@ -5,16 +5,26 @@
   "scripts": {
     "start": "gulp dev",
     "build": "gulp",
-    "upgrade": "jspm update",
     "pretest": "npm run-script build",
-    "test": "jest --coverage ./test/src/*/*.js"
+    "test": "jest ./test/src/*/*.js",
+    "test-debug": "jest ./test/src/*/*.js"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/openstax/os-webview.git"
   },
   "license": "AGPL-3.0",
-  "dependencies": {},
+  "dependencies": {
+    "http-server": "^0.10.0",
+    "rollup": "^0.50.0",
+    "rollup-plugin-commonjs": "^8.2.3",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-replace": "^2.0.0",
+    "superb.js": "^0.2.16",
+    "webpack": "^3.8.1",
+    "webpack-stream": "^4.0.0",
+    "whatwg-fetch": "^2.0.3"
+  },
   "devDependencies": {
     "babel-eslint": "7.2.3",
     "babel-jest": "*",
@@ -36,7 +46,7 @@
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "4.0.0",
     "gulp-babel": "7.0.0",
-    "gulp-cli": "^1.2.2",
+    "gulp-cli": "^1.4.0",
     "gulp-clip-empty-files": "0.1.2",
     "gulp-cssnano": "2.1.2",
     "gulp-env": "0.4.0",
@@ -62,10 +72,9 @@
     "jest-cli": "21.0.2",
     "jsdom": "11.2.0",
     "jsdom-global": "3.0.2",
-    "jspm": "0.17.0-beta.23",
     "node-localstorage": "^1.3.0",
     "pattern-library": "github:openstax/pattern-library",
-    "recordo": "0.0.6",
+    "recordo": "^0.0.6",
     "regenerator-runtime": "^0.11.0",
     "require-dir": "0.3.2",
     "sw-precache": "5.2.0",
@@ -76,129 +85,23 @@
   "jest": {
     "moduleNameMapper": {
       "^~/(.*)": "<rootDir>/dist/app/$1",
-      "superb": "<rootDir>/jspm_packages/npm/superb.js@0.2.16/dist/superb.js",
-      "recordo": "<rootDir>/jspm_packages/npm/recordo@0.0.6/dist/recordo.js",
-      "settings": "<rootDir>/dist/settings",
-      "fetch": "<rootDir>/jspm_packages/npm/whatwg-fetch@1.1.1/fetch.js"
+      "recordo": "<rootDir>/node_modules/recordo/dist/recordo.js",
+      "settings": "<rootDir>/dist/settings"
     },
+    "collectCoverage": true,
+    "coverageReporters": [
+      "json",
+      "lcov"
+    ],
     "coveragePathIgnorePatterns": [
-      "/jspm_packages",
       "/analytics"
     ],
     "setupFiles": [
       "<rootDir>/test/setupFile.js"
     ],
     "modulePathIgnorePatterns": [
-      "dev/jspm_packages",
-      "dist/jspm_packages",
       "package.json"
     ]
-  },
-  "jspm": {
-    "main": "src/app/main.js",
-    "directories": {
-      "lib": "src/app"
-    },
-    "configFiles": {
-      "jspm": "src/jspm.config.js",
-      "jspm:dev": "src/jspm.dev.js",
-      "jspm:browser": "src/jspm.browser.js"
-    },
-    "dependencies": {
-      "babel-polyfill": "npm:babel-polyfill@^6.23.0",
-      "babel-runtime": "npm:babel-runtime@^6.23.0",
-      "fetch": "npm:whatwg-fetch@^1.0.0",
-      "recordo": "npm:recordo@0.0.6",
-      "superb": "npm:superb.js@^0.2.7"
-    },
-    "devDependencies": {
-      "console": "github:jspm/nodelibs-console@^0.2.0-alpha",
-      "element-dataset": "npm:element-dataset@^2.2.5",
-      "jest": "npm:jest@^19.0.2",
-      "punycode": "github:jspm/nodelibs-punycode@^0.2.0-alpha",
-      "source-map": "npm:source-map@~0.5.6",
-      "uglify-js": "npm:uglify-js@^2.6",
-      "uglify-to-browserify": "npm:uglify-to-browserify@1.0"
-    },
-    "peerDependencies": {
-      "assert": "github:jspm/nodelibs-assert@^0.2.0-alpha",
-      "bcrypt-pbkdf": "npm:bcrypt-pbkdf@^1.0.0",
-      "buffer": "github:jspm/nodelibs-buffer@^0.2.0-alpha",
-      "child_process": "github:jspm/nodelibs-child_process@^0.2.0-alpha",
-      "constants": "github:jspm/nodelibs-constants@^0.2.0-alpha",
-      "crypto": "github:jspm/nodelibs-crypto@^0.2.0-alpha",
-      "dgram": "github:jspm/nodelibs-dgram@^0.2.0-alpha",
-      "dns": "github:jspm/nodelibs-dns@^0.2.0-alpha",
-      "ecc-jsbn": "npm:ecc-jsbn@~0.1.1",
-      "events": "github:jspm/nodelibs-events@^0.2.0-alpha",
-      "fs": "github:jspm/nodelibs-fs@^0.2.0-alpha",
-      "fsevents": "npm:fsevents@^1.0.0",
-      "http": "github:jspm/nodelibs-http@^0.2.0-alpha",
-      "https": "github:jspm/nodelibs-https@^0.2.0-alpha",
-      "incremental-dom": "npm:incremental-dom@^0.5.1",
-      "jodid25519": "npm:jodid25519@^1.0.0",
-      "jsbn": "npm:jsbn@0.1",
-      "module": "github:jspm/nodelibs-module@^0.2.0-alpha",
-      "net": "github:jspm/nodelibs-net@^0.2.0-alpha",
-      "os": "github:jspm/nodelibs-os@^0.2.0-alpha",
-      "path": "github:jspm/nodelibs-path@^0.2.0-alpha",
-      "process": "github:jspm/nodelibs-process@^0.2.0-alpha",
-      "querystring": "github:jspm/nodelibs-querystring@^0.2.0-alpha",
-      "stream": "github:jspm/nodelibs-stream@^0.2.0-alpha",
-      "string_decoder": "github:jspm/nodelibs-string_decoder@^0.2.0-alpha",
-      "tls": "github:jspm/nodelibs-tls@^0.2.0-alpha",
-      "tty": "github:jspm/nodelibs-tty@^0.2.0-alpha",
-      "tweetnacl": "npm:tweetnacl@0.14",
-      "url": "github:jspm/nodelibs-url@^0.2.0-alpha",
-      "util": "github:jspm/nodelibs-util@^0.2.0-alpha",
-      "vm": "github:jspm/nodelibs-vm@^0.2.0-alpha",
-      "zlib": "github:jspm/nodelibs-zlib@^0.2.0-alpha"
-    },
-    "overrides": {
-      "npm:browserify-zlib@0.1.4": {
-        "dependencies": {
-          "readable-stream": "^2.0.2",
-          "pako": "~0.2.0"
-        },
-        "map": {
-          "_stream_transform": "readable-stream/transform"
-        }
-      },
-      "npm:debug@2.6.9": {
-        "main": "browser.js",
-        "jspmNodeConversion": false,
-        "format": "cjs",
-        "map": {
-          "./browser.js": {
-            "node": "./node.js"
-          },
-          "./node.js": {
-            "browser": "./browser.js"
-          },
-          "fs": "@node/fs",
-          "net": "@node/net",
-          "tty": "@node/tty",
-          "util": "@node/util"
-        }
-      },
-      "npm:inherits@2.0.3": {
-        "ignore": [
-          "test.js"
-        ]
-      },
-      "npm:lodash@4.17.4": {
-        "map": {
-          "buffer": "@empty",
-          "process": "@empty"
-        }
-      },
-      "npm:pbkdf2@3.0.14": {
-        "main": "browser.js"
-      },
-      "npm:safe-buffer@5.1.1": {
-        "browser": "index.js"
-      }
-    }
   },
   "engines": {
     "node": ">=6.2"
