--- a/gulp/.scss-lint.yml
+++ b/gulp/.scss-lint.yml
@@ -26,6 +26,7 @@ linters:
             - grid-gap
             - grid-row-gap
             - grid-column-gap
+            - grid-row-start
             - grid-template-columns
             - grid-template-rows
             - grid-column-start
