--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "hard-source-webpack-plugin": "^0.5.3",
     "http-server": "^0.10.0",
     "ignore-loader": "^0.1.2",
+    "mapbox": "^1.0.0-beta10",
+    "mapbox-gl": "^0.47.0",
+    "mapbox.js": "^3.1.1",
+    "particles.js": "^2.0.0",
+    "pattern-library": "github:openstax/pattern-library#v1.1.5",
+    "react-mapbox-gl": "^3.8.0",
     "particles.js": "^2.0.0",
     "pattern-library": "github:openstax/pattern-library#v1.1.5",
     "rollup": "^0.50.0",
