--- a/script/build
+++ b/script/build
@@ -3,6 +3,7 @@ cd "$(dirname "$0")/.." || exit 111
 source ./script/bootstrap || exit 111
 
 try npm run-script build
+/bin/rm -r ./dist/app ./dist/settings*.js*
 
 try "$(npm bin)/node-sass" --source-map true --source-map-contents true \
 --output dist/styles/ \
