--- a/script/build
+++ b/script/build
@@ -4,7 +4,9 @@ source ./script/bootstrap || exit 111
 
 try npm run-script build
 do_progress "Removing temporary build files" \
-  /bin/rm -r ./dist/settings-example*
+  find ./dist/app -type f -not -name '*.css' -delete
+
+/bin/rm -f ./dist/settings*.js*
 
 try "$(npm bin)/node-sass" --source-map true --source-map-contents true \
 --output dist/styles/ \
