--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-runtime": "^6.20.0",
     "browser-sync": "2.18.13",
     "connect-history-api-fallback": "1.3.0",
+    "css-loader": "^1.0.1",
     "del": "3.0.0",
     "eslint": "5.7.0",
     "find-pkg": "1.0.0",
@@ -76,6 +77,7 @@
     "recordo": "^0.0.6",
     "regenerator-runtime": "^0.11.0",
     "require-dir": "0.3.2",
+    "style-loader": "^0.23.1",
     "sw-precache": "5.2.0",
     "systemjs-builder": "0.16.10",
     "systemjs-jest": "^1.0.0",
