--- a/package.json
+++ b/package.json
@@ -1,111 +1,106 @@
 {
-  "name": "@openstax/os-webview",
-  "version": "2.24.0",
-  "description": "OpenStax webview",
-  "scripts": {
-    "start": "gulp dev",
-    "build": "gulp",
-    "pretest": "npm run-script build",
-    "test": "jest `find ./test/src -name '*.test.js'`",
-    "test-debug": "jest `find ./test/src -name '*.test.js'`"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/openstax/os-webview.git"
-  },
-  "license": "AGPL-3.0",
-  "dependencies": {
-    "http-server": "^0.10.0",
-    "ignore-loader": "^0.1.2",
-    "mapbox-gl": "^0.47.0",
-    "particles.js": "^2.0.0",
-    "pattern-library": "github:openstax/pattern-library#v1.1.5",
-    "source-map-loader": "^0.2.3",
-    "superb.js": "^0.3.0",
-    "webpack": "^4.23.1",
-    "webpack-stream": "^5.1.1",
-    "whatwg-fetch": "^2.0.3"
-  },
-  "devDependencies": {
-    "babel-eslint": "7.2.3",
-    "babel-jest": "*",
-    "babel-plugin-transform-async-to-generator": "6.24.1",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-decorators": "6.24.1",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-plugin-transform-object-assign": "6.22.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.4.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-runtime": "^6.20.0",
-    "browser-sync": "2.18.13",
-    "connect-history-api-fallback": "1.3.0",
-    "css-loader": "^1.0.1",
-    "del": "3.0.0",
-    "eslint": "5.7.0",
-    "find-pkg": "1.0.0",
-    "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-autoprefixer": "4.0.0",
-    "gulp-babel": "7.0.0",
-    "gulp-cli": "^1.4.0",
-    "gulp-clip-empty-files": "0.1.2",
-    "gulp-cssnano": "2.1.2",
-    "gulp-env": "0.4.0",
-    "gulp-eslint": "4.0.0",
-    "gulp-htmlmin": "3.0.0",
-    "gulp-humans": "2.0.2",
-    "gulp-if": "2.0.2",
-    "gulp-imagemin": "3.3.0",
-    "gulp-jest": "^2.0.0",
-    "gulp-load-plugins": "1.5.0",
-    "gulp-real-favicon": "0.2.2",
-    "gulp-rename": "1.2.2",
-    "gulp-replace": "0.6.1",
-    "gulp-sass": "3.1.0",
-    "gulp-scss-lint": "0.6.1",
-    "gulp-sourcemaps": "2.6.1",
-    "gulp-superviewsjs": "github:dak/gulp-superviewsjs",
-    "gulp-util": "3.0.8",
-    "gulp-wrap": "0.13.0",
-    "isomorphic-fetch": "^2.2.1",
-    "jest": "21.0.2",
-    "jest-cli": "21.0.2",
-    "jsdom": "11.2.0",
-    "jsdom-global": "3.0.2",
-    "node-localstorage": "^1.3.0",
-    "recordo": "^0.0.6",
-    "regenerator-runtime": "^0.11.0",
-    "require-dir": "0.3.2",
-    "style-loader": "^0.23.1",
-    "sw-precache": "5.2.0",
-    "systemjs-builder": "0.16.10",
-    "systemjs-jest": "^1.0.0",
-    "yargs": "8.0.2"
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "\\.css$": "<rootDir>/__mocks__/styleMock.js",
-      "^~/(.*)": "<rootDir>/dist/app/$1",
-      "recordo": "<rootDir>/node_modules/recordo/dist/recordo.js",
-      "settings": "<rootDir>/src/settings-example.js"
+    "name": "@openstax/os-webview",
+    "version": "2.25.0",
+    "description": "OpenStax webview",
+    "scripts": {
+        "start": "gulp dev",
+        "build": "gulp",
+        "pretest": "npm run-script build",
+        "test": "jest `find ./test/src -name '*.test.js'`",
+        "test-debug": "jest `find ./test/src -name '*.test.js'`"
     },
-    "collectCoverage": true,
-    "coverageReporters": [
-      "json",
-      "lcov"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/analytics"
-    ],
-    "setupFiles": [
-      "<rootDir>/test/setupFile.js"
-    ],
-    "modulePathIgnorePatterns": [
-      "package.json"
-    ]
-  },
-  "engines": {
-    "node": ">=6.2"
-  }
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/openstax/os-webview.git"
+    },
+    "license": "AGPL-3.0",
+    "dependencies": {},
+    "devDependencies": {
+        "babel-eslint": "7.2.3",
+        "babel-jest": "*",
+        "babel-plugin-transform-async-to-generator": "6.24.1",
+        "babel-plugin-transform-class-properties": "6.24.1",
+        "babel-plugin-transform-decorators": "6.24.1",
+        "babel-plugin-transform-decorators-legacy": "1.3.4",
+        "babel-plugin-transform-runtime": "^6.23.0",
+        "babel-polyfill": "^6.23.0",
+        "babel-preset-env": "^1.4.0",
+        "babel-preset-es2015": "6.24.1",
+        "babel-runtime": "^6.20.0",
+        "browser-sync": "^2.18.13",
+        "connect-history-api-fallback": "1.3.0",
+        "css-loader": "^1.0.1",
+        "del": "3.0.0",
+        "eslint": "5.10.0",
+        "find-pkg": "1.0.0",
+        "gulp": "github:gulpjs/gulp#4.0",
+        "gulp-autoprefixer": "4.0.0",
+        "gulp-babel": "7.0.0",
+        "gulp-cli": "^1.4.0",
+        "gulp-clip-empty-files": "0.1.2",
+        "gulp-cssnano": "2.1.2",
+        "gulp-env": "0.4.0",
+        "gulp-eslint": "4.0.0",
+        "gulp-htmlmin": "^5.0.1",
+        "gulp-humans": "2.0.2",
+        "gulp-if": "2.0.2",
+        "gulp-imagemin": "3.3.0",
+        "gulp-jest": "^2.0.0",
+        "gulp-load-plugins": "1.5.0",
+        "gulp-real-favicon": "0.2.2",
+        "gulp-rename": "1.2.2",
+        "gulp-replace": "0.6.1",
+        "gulp-sass": "3.1.0",
+        "gulp-scss-lint": "0.6.1",
+        "gulp-sourcemaps": "2.6.1",
+        "gulp-superviewsjs": "github:dak/gulp-superviewsjs",
+        "gulp-util": "3.0.8",
+        "gulp-wrap": "0.13.0",
+        "http-server": "^0.10.0",
+        "ignore-loader": "^0.1.2",
+        "isomorphic-fetch": "^2.2.1",
+        "jest": "23.6.0",
+        "jsdom": "11.2.0",
+        "jsdom-global": "3.0.2",
+        "mapbox-gl": "^0.47.0",
+        "node-localstorage": "^1.3.0",
+        "particles.js": "^2.0.0",
+        "pattern-library": "github:openstax/pattern-library#v1.1.5",
+        "recordo": "^0.0.6",
+        "regenerator-runtime": "^0.11.0",
+        "require-dir": "0.3.2",
+        "source-map-loader": "^0.2.4",
+        "style-loader": "^0.23.1",
+        "superb.js": "^0.3.0",
+        "sw-precache": "5.2.0",
+        "webpack": "^4.23.1",
+        "webpack-stream": "^5.2.1",
+        "whatwg-fetch": "^3.0.0",
+        "yargs": "8.0.2"
+    },
+    "jest": {
+        "moduleNameMapper": {
+            "\\.css$": "<rootDir>/__mocks__/styleMock.js",
+            "^~/(.*)": "<rootDir>/dist/app/$1",
+            "recordo": "<rootDir>/node_modules/recordo/dist/recordo.js",
+            "settings": "<rootDir>/src/settings-example.js"
+        },
+        "collectCoverage": true,
+        "coverageReporters": [
+            "json",
+            "lcov"
+        ],
+        "coveragePathIgnorePatterns": [
+            "/analytics"
+        ],
+        "setupFiles": [
+            "<rootDir>/test/setupFile.js"
+        ],
+        "modulePathIgnorePatterns": [
+            "package.json"
+        ]
+    },
+    "engines": {
+        "node": ">=6.2"
+    }
 }
