--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
         "del": "3.0.0",
         "eslint": "5.10.0",
         "find-pkg": "1.0.0",
-        "gulp": "github:gulpjs/gulp#4.0",
+        "gulp": "gulpjs/gulp#4.0",
         "gulp-autoprefixer": "4.0.0",
         "gulp-babel": "7.0.0",
-        "gulp-cli": "^1.4.0",
+        "gulp-cli": "^2.0.1",
         "gulp-clip-empty-files": "0.1.2",
         "gulp-cssnano": "2.1.2",
         "gulp-env": "0.4.0",
@@ -66,6 +66,7 @@
         "node-localstorage": "^1.3.0",
         "particles.js": "^2.0.0",
         "pattern-library": "github:openstax/pattern-library#v1.1.5",
+        "piped-webpack": "^1.4.1",
         "recordo": "^0.0.6",
         "regenerator-runtime": "^0.11.0",
         "require-dir": "0.3.2",
@@ -74,7 +75,6 @@
         "superb.js": "^0.3.0",
         "sw-precache": "5.2.0",
         "webpack": "^4.23.1",
-        "webpack-stream": "^5.2.1",
         "whatwg-fetch": "^3.0.0",
         "yargs": "8.0.2"
     },
