--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,9 @@ addons:
       - g++-4.8
 script:
   - ./script/setup
+  - ./script/build
   - travis_wait ./script/test
+  - rm -rf ./dist/app
 after_script:
   # Report coverage to codecov
   - bash <(curl -s https://codecov.io/bash)
