--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
         "gulp-rename": "1.2.2",
         "gulp-replace": "0.6.1",
         "gulp-sass": "3.1.0",
-        "gulp-scss-lint": "0.6.1",
+        "gulp-sass-lint": "^1.4.0",
         "gulp-sourcemaps": "2.6.1",
         "gulp-superviewsjs": "github:dak/gulp-superviewsjs",
         "gulp-util": "3.0.8",
