--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "@openstax/os-webview",
     "version": "2.33.0",
     "description": "OpenStax webview",
+    "scripts": {
+        "test": "jest ./test/src"
+    },
     "repository": {
         "type": "git",
         "url": "https://github.com/openstax/os-webview.git"
