--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     },
     "license": "AGPL-3.0",
     "dependencies": {
-        "gulp-rev": "^9.0.0"
+        "gulp-rev": "^9.0.0",
+        "workbox-build": "^4.3.1"
     },
     "devDependencies": {
         "babel-eslint": "7.2.3",
@@ -67,7 +68,6 @@
         "source-map-loader": "^0.2.4",
         "style-loader": "^0.23.1",
         "superb.js": "^0.3.0",
-        "sw-precache": "5.2.0",
         "webpack": "^4.23.1",
         "webpack-cli": "^3.1.2",
         "yargs": "8.0.2"
