--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     },
     "license": "AGPL-3.0",
     "dependencies": {
+        "babel-preset-react": "^6.24.1",
         "gulp-rev": "^9.0.0",
+        "react": "^16.13.0",
+        "react-dom": "^16.13.0",
         "workbox-build": "^4.3.1"
     },
     "devDependencies": {
