--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "gulp-rev": "^9.0.0",
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
+        "react-test-renderer": "^16.13.0",
         "workbox-build": "^4.3.1"
     },
     "devDependencies": {
