--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
     },
     "license": "AGPL-3.0",
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.28",
+        "@fortawesome/free-brands-svg-icons": "^5.13.0",
+        "@fortawesome/free-regular-svg-icons": "^5.13.0",
+        "@fortawesome/free-solid-svg-icons": "^5.13.0",
+        "@fortawesome/react-fontawesome": "^0.1.9",
         "gulp-rev": "^9.0.0",
         "react": "^16.13.0",
+        "react-accessible-accordion": "^3.0.1",
         "react-dom": "^16.13.0",
         "react-test-renderer": "^16.13.0",
         "workbox-build": "^4.3.1"
