--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@fortawesome/free-regular-svg-icons": "^5.13.0",
         "@fortawesome/free-solid-svg-icons": "^5.13.0",
         "@fortawesome/react-fontawesome": "^0.1.9",
+        "enzyme": "^3.11.0",
         "gulp-rev": "^9.0.0",
         "react": "^16.13.0",
         "react-accessible-accordion": "^3.0.1",
@@ -31,6 +32,7 @@
         "@babel/plugin-transform-runtime": "^7.8.3",
         "@babel/preset-env": "^7.8.7",
         "@babel/preset-react": "^7.8.3",
+        "@testing-library/react": "^10.0.1",
         "babel-eslint": "7.2.3",
         "babel-jest": "^25.1.0",
         "babel-polyfill": "^6.26.0",
@@ -38,6 +40,7 @@
         "connect-history-api-fallback": "1.3.0",
         "css-loader": "^1.0.1",
         "del": "3.0.0",
+        "enzyme-adapter-react-16": "^1.15.2",
         "eslint": "5.10.0",
         "eslint-plugin-react": "^7.19.0",
         "find-pkg": "1.0.0",
