--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "del": "3.0.0",
         "eslint": "5.10.0",
         "eslint-plugin-react": "^7.19.0",
+        "eslint-plugin-react-hooks": "^4.0.4",
         "find-pkg": "1.0.0",
         "gulp": "gulpjs/gulp#4.0",
         "gulp-autoprefixer": "4.0.0",
