--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@fortawesome/free-regular-svg-icons": "^5.13.0",
         "@fortawesome/free-solid-svg-icons": "^5.13.0",
         "@fortawesome/react-fontawesome": "^0.1.9",
+        "classnames": "^2.2.6",
         "enzyme": "^3.11.0",
         "enzyme-adapter-preact-pure": "^2.2.0",
         "gulp-rev": "^9.0.0",
